fix spacing on song generator

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,3 @@
-/* font-family: 'Klee One', cursive;
-font-family: 'Petit Formal Script', cursive,; */
-
 * {
   box-sizing: border-box;
   margin: 0;
@@ -14,11 +11,11 @@ font-family: 'Petit Formal Script', cursive,; */
 }
 
 body {
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
-    margin: 0 auto;
-    max-width: 1920px;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+  max-width: 1920px;
 }
 
 img {
@@ -36,7 +33,7 @@ h1 {
 
 h2,
 h3 {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-weight: 400;
   text-align: center;
   font-size: 2em;
@@ -100,16 +97,6 @@ a:visited {
   justify-content: center;
   align-items: center;
   gap: 40px;
-  /* max-height: 600px; */
-  /* padding: 20px;
-    margin: 0 auto;
-    /* margin-left: 40px;
-    margin-right: 40px; */
-  /*display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 40px; */
-  /* border: 1px solid black; */
 }
 
 .hero-section img {
@@ -124,7 +111,6 @@ a:visited {
   font-size: 3em;
   margin-bottom: 0 auto;
   color: #000000;
-
 }
 
 .hero-text p {
@@ -141,12 +127,11 @@ a:visited {
 #bio {
   width: 95%;
   margin: 20px auto;
-  /* min-height: 200px; */
   text-align: center;
 }
 
 #bio p {
-  padding: .5em 0.6em;
+  padding: 0.5em 0.6em;
 }
 
 .welcome {
@@ -157,7 +142,6 @@ a:visited {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  
 }
 
 .choose-theme2 form {
@@ -215,17 +199,16 @@ label {
   margin: 0 auto 12px auto;
   text-align: center;
   font-family: "Klee One", cursive, sans-serif;
-  /* font-size: 0.92em; */
   line-height: 1.2;
   max-width: 1000px;
   padding-bottom: 1em;
 }
 .spotlight a {
-    text-decoration: none;
-    color: #000000;
-    border: 1px solid black;
-    padding: .5em;
-    margin-top: 1em;
+  text-decoration: none;
+  color: #000000;
+  border: 1px solid black;
+  padding: 0.5em;
+  margin-top: 1em;
 }
 
 /* links section */
@@ -266,7 +249,7 @@ label {
 
 .link-card img {
   max-width: 350px;
-  }
+}
 
 /* Contact Form */
 
@@ -308,10 +291,6 @@ textarea {
   font-family: monospace, "Klee One", cursive, sans-serif;
 }
 
-/* .contactForm textarea {
-    font-family:'Klee One', cursive, sans-serif;
-} */
-
 .contactForm button {
   min-width: 25%;
   margin: 0 auto 0.8em auto;
@@ -330,15 +309,13 @@ button {
 }
 
 .btnAnimate:hover {
-    box-shadow: 0px 0px 10px 1px #9b9999;
-    transition: 5ms;
+  box-shadow: 0px 0px 10px 1px #9b9999;
+  transition: 5ms;
 }
 
 .btnAnimate:active {
-    transform: translateY(4px);
+  transform: translateY(4px);
 }
-
-
 
 /* FOOTER section */
 
@@ -362,16 +339,16 @@ footer {
 }
 
 .about h2 {
-  padding-bottom: .5em;
+  padding-bottom: 0.5em;
 }
 
 .about h3 {
   font-size: 1.2em;
-  padding-top: .5em;
+  padding-top: 0.5em;
 }
 
 .about p {
-  padding-top: .6em;
+  padding-top: 0.6em;
 }
 
 /* Classes */
@@ -388,47 +365,41 @@ footer {
   background-color: rgb(203, 180, 215);
 }
 
-
 @media (min-width: 1244px) {
-
-    .hero-section {
-      flex-direction: row-reverse;
-
-    }
-
-    .about {
-      width: 70%;
-     }
-
-     .about img {
-      max-height: 700px;
-      object-fit: cover;
-     }
-
-     .about h2 {
-      font-size: 2.5em;
-     }
+  .hero-section {
+    flex-direction: row-reverse;
   }
 
-
-  @media (max-width: 350px) {
-    .hero-text h2 {
-      font-size: 2.4em;
-    }
-
-    .hero-text p {
-      font-size: 1.2em;
-    }
-
-    p {
-      font-size: 1em;
-        }
-
+  .about {
+    width: 70%;
   }
 
-  @media (max-width: 660px) {
-    .choose-theme2 form {
+  .about img {
+    max-height: 700px;
+    object-fit: cover;
+  }
+
+  .about h2 {
+    font-size: 2.5em;
+  }
+}
+
+@media (max-width: 350px) {
+  .hero-text h2 {
+    font-size: 2.4em;
+  }
+
+  .hero-text p {
+    font-size: 1.2em;
+  }
+
+  p {
+    font-size: 1em;
+  }
+}
+
+@media (max-width: 660px) {
+  .choose-theme2 form {
     justify-content: center;
-      
-    }
   }
+}
